# empire-json

./: README.md  dev-run.bat  pyproject.toml  requirements.txt
docs/: conf.py  flatten.rst  json_io.rst  modules.rst
docs/html/: flatten.html  genindex.html  index.html  json_error_handler.html  json_io.html  json_list.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js  usage.html
docs/html/_sources/: index.rst.txt  json_error_handler.rst.txt  json_list.rst.txt  modules.rst.txt  usage.rst.txt
docs/html/_static/: header.xcf
src/ejson/: flatten.py  json_io.py  json_list.py
src/ejson/error_handler/: __init__.py  cases.py  evaluators.py  fixers.py  handled_json_error.py  json_error_handler.py  regexes.py  util.py
src/ejson/facades/: orjson_.py  rapidjson_.py
